--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -17,13 +17,14 @@ body{
     "content3 content3 content4 content4 content4 footer footer"
     ;
     grid-gap: 11px;
+ 
 }
 .navt{
     background: #a7a69e;
     grid-area:navt;
     justify-content: space-between;
     display: flex;
-   border-radius: 10px;
+   border-radius: 16px;
    width: auto;
    height: 70px;
 
@@ -31,7 +32,7 @@ body{
 
     .afeef {
         display: flex;
-        border-radius: 10px;
+        border-radius: 16px;
         margin-left: 2%;
         width: auto;
         height: auto;
@@ -42,7 +43,7 @@ body{
     }
     .move{
         display: flex;
-        border-radius: 10px;
+        border-radius: 16px;
         width: 200px;
         margin-left: -66%;
         opacity: 0;
@@ -109,8 +110,9 @@ body{
       left: 0;
       transform: translateX(0);
     }
-    50% {+
-      width: 0;
+    50% {
+        
+      width: 0%;
       left: 50%;
       transform: translateX(-50%);
     }
@@ -178,7 +180,7 @@ body{
 main{
     background: #a7a69e;
     grid-area:main;
-    border-radius: 10px;
+    border-radius: 16px;
 
 }
 .flwr-pht{
@@ -221,33 +223,33 @@ main{
 #content1{
     background: #a7a69e;
     grid-area:content1;
-    border-radius: 10px;
+    border-radius: 16px;
     overflow: hidden;
 
 }
 #content2{
     background:#a7a69e;
     grid-area:content2;
-    border-radius: 10px;
+    border-radius: 16px;
     
 }
 .topc{
     display: flex;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
-    border-radius: 10px;
+    border-radius: 16px;
     width: auto;
     height:auto;
     color: inherit;
     text-decoration: none;
     font-size: 1.7rem;
     margin-top: 4%;
-    margin-left: 4%;
+    margin-left: 4%;    
     color: black;
     text-decoration: none;
 }
 #arrw{
     display: flex; 
-    border-radius: 10px;
+    border-radius: 16px;
     width: auto;
     height:auto;
     margin-top: 0%;
@@ -269,37 +271,46 @@ main{
     margin-top: 5%;
     margin-left: 2.5%;
     border-radius: 20px;
+    
    
  }
  #head-space{ 
     width: 100%; 
     height: 100%; 
     object-fit: cover; 
-    border-radius: 10px;
-        object-position: 0% 13%;
+    border-radius: 16px;
+
+    
+    /* animation: fadee 1s linear 0s forwards ;
 
 }
-#head-space {
-    transition: transform 0.2s; /* add a smooth transition effect */
-    transform-style: preserve-3d; /* enable 3D transformations */
-  }
+@keyframes fadee {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    } */
+}
+/* #head-space {
+    transition: transform 0.2s;
+    transform-style: preserve-3d; 
+  } */
   
-  #head-space:hover {
-    transform: translateZ(200px); /* move the image 20px forward on hover */
-  }
+ 
  .allc{
     position:relative;
     margin-top: 30px;
     width: auto;
     height:auto;
-    border-radius: 10px;
+    border-radius: 16px;
 }
 .g1{
     display: flex;
     border: 2px solid rgb(39, 39, 39);  
     width: 24vw;
     margin-left: 5%;
-    border-radius: 10px;
+    border-radius: 16px;
     }
 .google{
     display: flex;
@@ -321,7 +332,7 @@ main{
     margin-left: 5%;
     margin-top: 6%;
 
-    border-radius: 10px;
+    border-radius: 16px;
 }
 .hackr{
     display: flex;
@@ -341,7 +352,7 @@ main{
     border: 2px solid rgb(39, 39, 39);  
     width: 24vw;
     margin-left: 5%;
-    border-radius: 10px;
+    border-radius: 16px;
     margin-top: 6%;
 
 }
@@ -361,14 +372,14 @@ main{
 }
 #content3{
     grid-area:content3 ;
-    border-radius: 10px;
+    border-radius: 16px;
     display: flexbox;
     background-color: #a7a69e   ;
-    border-radius: 10px;
+    border-radius: 16px;
 }
 .explain{
     display: flex;
-    border-radius: 10px;
+    border-radius: 16px;
     text-align:start;
     justify-content: center;
     margin-top: -30px;
@@ -391,7 +402,7 @@ main{
 }
 #star{
    margin-top: 0%;
-   border-radius: 10px;
+   border-radius: 16px;
    width: auto;
    height: auto;
    font-size: 3.1rem;
@@ -412,9 +423,9 @@ main{
     }
 #content4{
     grid-area:content4 ;
-    border-radius: 10px;
+    border-radius: 16px;
     background-color: #a7a69e;
-    border-radius: 10px;
+    border-radius: 16px;
     position:relative;
 
 }
@@ -422,7 +433,7 @@ main{
 .txt2{
     display: flex;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
-    border-radius: 10px;
+    border-radius: 16px;
     width: auto;
     height:auto;
     font-size: 1.2rem;
@@ -431,7 +442,7 @@ main{
 }
 #str{
     display: flex; 
-    border-radius: 10px;
+    border-radius: 16px;
     width: auto;
     height:auto;
     font-size: 2rem;
@@ -448,16 +459,16 @@ main{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
     margin-top:14% ;
     margin-left: 5%;
-    border-radius: 10px;
+    border-radius: 16px;
     width: auto;
     height:auto;
     font-size: 4rem;
 }
 footer{
     grid-area:footer;
-    border-radius: 10px;
+    border-radius: 16px;
     background-color: #a7a69e;
-    border-radius: 10px;
+    border-radius: 16px;
     display: flex;
     justify-content:space-around;
     align-items: center;
@@ -527,7 +538,7 @@ footer{
         width: 100%;
         height: 100%; 
         object-fit: cover; 
-        border-radius: 10px; 
+        border-radius: 16px; 
         margin: 0; 
         padding: 0; 
         object-position:top; 
@@ -558,7 +569,7 @@ footer{
     .topc{
         display: flex;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
-        border-radius: 10px;
+        border-radius: 16px;
         width: auto;
         height:auto;
         color: inherit;
@@ -575,7 +586,7 @@ footer{
         grid-area:navt;
         justify-content: space-between;
         display: flex;
-       border-radius: 10px;
+       border-radius: 16px;
        width: auto;
        height: 100px;
     
@@ -583,7 +594,7 @@ footer{
     .afeef {
         opacity: 0;
         /* display: flex;
-        border-radius: 10px;
+        border-radius: 16px;
         margin-left: 2%;
         width: auto;
         height: auto;
@@ -596,7 +607,7 @@ footer{
         opacity: 1;
         z-index: 3;
         display: flex;
-        border-radius: 10px;
+        border-radius: 16px;
         margin-right:22%;
         width: auto;
         height: auto;
@@ -607,7 +618,7 @@ footer{
         }
     /* .move{
         display: flex;
-        border-radius: 10px;
+        border-radius: 16px;
         width: auto;
         margin-left: -40%;
         opacity: 1;
@@ -667,7 +678,7 @@ footer{
     }
     #arrw{
         display: flex; 
-        border-radius: 10px;
+        border-radius: 16px;
         width: auto;
         height:auto;
         margin-top: -2.3%;
@@ -694,14 +705,14 @@ footer{
         margin-top: 50px;
         width: auto;
         height:auto;
-        border-radius: 10px;
+        border-radius: 16px;
     }
     .g1{
         display: flex;
         border: 2px solid rgb(39, 39, 39);  
         width: 90vw;
         margin-left: 3.5%;
-        border-radius: 10px;
+        border-radius: 16px;
         }
     .google{
         display: flex;
@@ -721,7 +732,7 @@ footer{
         border: 2px solid rgb(39, 39, 39);  
         width: 90vw;
         margin-left: 3.5%;
-        border-radius: 10px;
+        border-radius: 16px;
         margin-top: 6%;
     }
     .hackr{
@@ -742,7 +753,7 @@ footer{
         border: 2px solid rgb(39, 39, 39);  
         width: 90vw;
         margin-left: 3.5%;
-        border-radius: 10px;
+        border-radius: 16px;
         margin-top: 6%;
     
     }
@@ -763,7 +774,7 @@ footer{
     .txt2{
         display: flex;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
-        border-radius: 10px;
+        border-radius: 16px;
         width: auto;
         height:auto;
         font-size: 2rem;
@@ -772,7 +783,7 @@ footer{
     }
     #str{
         display: flex; 
-        border-radius: 10px;
+        border-radius: 16px;
         width: auto;
         height:auto;
         font-size: 5rem;
