--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -278,6 +278,7 @@ main{
     width: 100%; 
     height: 100%; 
     object-fit: cover; 
+    object-position: top;
     border-radius: 16px;
 
     
@@ -388,7 +389,7 @@ main{
     font-size: 1.4rem;
     margin-left: 20px;
     padding: 2px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:'Franklin Gothic medium', 'Arial Narrow', Arial, sans-serif;
     transform: translateY(3px);
     transition: transform 0.5s;
   }
@@ -546,7 +547,7 @@ footer{
       }
      
 
-@media only screen and (max-width:1080px) {
+@media only screen and (max-width:1080) {
     body{
         overflow-y: auto;
         margin-left:1.5% ;
@@ -867,4 +868,115 @@ footer{
     zoom:2;
     margin-bottom: 20px;
   }
+}
+/* min height for some reason is fucking 864 */
+/* and min width is 1495 */
+@media only screen and (min-width:1496px ) {
+    body{
+        background-color: rgb(0, 0, 0);
+       overflow: hidden;
+    }
+    .allc{
+        position:relative;
+        margin-top: 75px;
+        width: auto;
+        height:auto;
+        border-radius: 16px;
+    }
+    #imagecertificate{
+        width: 95%;
+        height: auto ;
+        margin-top: 45px;
+        margin-left: 2.5%;
+        border-radius: 20px;
+        
+       
+     }
+     .topc{
+        display: flex;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        border-radius: 16px;
+        width: auto;
+        height:auto;
+        color: inherit;
+        text-decoration: none;
+        font-size: 1.7rem;
+        margin-top: 20px;
+        margin-left: 4%;    
+        color: black;
+        text-decoration: none;
+    }
+    .cnt-me{
+        display: flex;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+        margin-top:19% ;
+        margin-left: 3%;
+        border-radius: 16px;
+        width: auto;
+        height:auto;
+        font-size: 4rem;
+    }
+    .explain{
+        display: flex;
+        border-radius: 16px;
+        text-align:start;
+        justify-content: center;
+        margin-top: -3px;
+        width: 400px;
+        height: auto;
+        font-size: 1.4rem;
+        margin-left: 20px;
+        padding: 2px;
+        font-family:'Franklin Gothic medium', 'Arial Narrow', Arial, sans-serif;
+        transform: translateY(3px);
+        transition: transform 0.5s;
+      }
+      .txt1 {
+        display: flex;
+        justify-content: left;
+        margin-top: 3%;
+        margin-left:3%;
+        font-size:4rem;
+        width: auto;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    }
+    .int{
+        display: flex;
+        height: auto;
+        width: auto;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        font-size: 1.3rem;  
+        color: inherit;
+        text-decoration: none;
+    }
+    .int:hover{
+        cursor: pointer;
+        text-decoration: underline;
+    }
+    .git{
+        display: flex;
+        height: auto;
+        width: auto;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        font-size: 1.3rem;  
+        color: inherit;
+        text-decoration: none;
+    }
+    .git:hover{
+        cursor: pointer;
+        text-decoration: underline;
+    }
+    .lind{
+        display: flex;
+        height: auto;
+        width: auto;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+        font-size: 1.3rem;  
+        color: inherit;
+        text-decoration: none;
+    }
+    .lind:hover{
+        cursor: pointer;
+        text-decoration: underline;
+    }
 }
