--- a/contactpage(css).css
+++ b/contactpage(css).css
@@ -415,3 +415,10 @@ display: flex;
 
     }
 }
+@media only screen and (min-width:1496px ) {
+
+    .social{
+        margin-top: 460px;
+        margin-left: 10px;
+    }
+}
