--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -278,7 +278,7 @@ main{
     width: 100%; 
     height: 100%; 
     object-fit: cover; 
-    object-position: top;
+    object-position: center;
     border-radius: 16px;
 
     
@@ -658,8 +658,8 @@ footer{
     .about:hover{
         cursor: pointer;}
         #head-space {
-  transition: transform 0.1s;
-  transform-style: preserve-3d;
+        transition: transform 0.1s;
+        transform-style: preserve-3d;
 }
           
           #head-space:hover {
