--- a/certificates(css).css
+++ b/certificates(css).css
@@ -66,6 +66,26 @@ body {
     overflow: hidden;
     cursor: auto; /* Hide default cursor */
 }
+#backspace {
+    position: absolute;
+    top: 20px; /* Adjust the distance from the top as needed */
+    left: 5%; /* Center horizontally */
+    transform: translateX(-50%); /* Adjust for centering */
+    color: #fff;
+    background: none;
+    border: none;
+    font-size: xx-large;
+    font-family: monospace;
+    font-weight: bold;
+    opacity: 0.7;
+    transition: opacity 0.2s;
+    z-index: 3; /* Ensure it appears above other elements */
+}
+
+#backspace:hover {
+    opacity: 1;
+    cursor: pointer;
+}
 
 .fluid-trail {
     position: absolute;
