--- a/certificates(css).css
+++ b/certificates(css).css
@@ -10,6 +10,7 @@ body{
 
 
 }
+
 .slider{
     position: relative;
     margin-top: 100px;
@@ -72,8 +73,10 @@ body {
     left: 5%; /* Center horizontally */
     transform: translateX(-50%); /* Adjust for centering */
     color: #fff;
-    background: none;
+    background-color: #797871;
     border: none;
+    padding: 10px 20px 10px 20px;
+    border-radius: 15px;
     font-size: xx-large;
     font-family: monospace;
     font-weight: bold;
@@ -82,10 +85,7 @@ body {
     z-index: 3; /* Ensure it appears above other elements */
 }
 
-#backspace:hover {
-    opacity: 1;
-    cursor: pointer;
-}
+
 
 .fluid-trail {
     position: absolute;
