--- a/certificates(css).css
+++ b/certificates(css).css
@@ -175,6 +175,20 @@ body{
     margin-top: 2%;
     box-shadow: 3px 6px 10px 3px rgba(0, 0, 0, 0.779) ;
 }
+.item{
+    position: absolute;
+    width: 350px;
+    height: 320px;
+    text-align: justify;
+    background-color: #fff;
+    border-radius: 10px;
+    /* padding: 20px; */
+    transition:  0.5s;
+    left: calc(50% - 220px);
+    top: 0;
+    margin-top: 2%;
+    box-shadow: 3px 6px 10px 3px rgba(0, 0, 0, 0.779) ;
+}
 #next{
     position: absolute;
     right:2%;
